vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation VPC'

Resources:
  MyVPC:
  # MyVPC
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC
# Public Subnet1A in AZ 1
  PublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1A
# Private Subnet in AZ 1
  AppPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1A
# Data Private subnet in AZ 1
  DataPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.3.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1A
# Public subnet in AZ 2
  PublicSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1B
# APP Private subnet in AZ 2
  AppPrivateSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.5.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1B
# Data Private subnet in AZ 2          
  DataPrivateSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.6.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1B

# Internet Gateway
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: myvpc-igw

# Attach the Internet Gateway to the VPC
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

# Public RouteTable
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

# Public Routes
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

# Public Subnet 1A Route Table Associations 
  PublicSubnet1ARouteTableAssociations:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

# Public Subnet 1B Route Table Associations 
  PublicSubnet1BRouteTableAssociations:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1B
      RouteTableId: !Ref PublicRouteTable

# Bastion Server
  BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: Bastion
      ImageId: ami-051eaec1417c5d4ae 
      SubnetId: !Ref PublicSubnet1A
      SecurityGroupIds:
        - !Ref BastionSG
      Tags:
        - Key: Name
          Value: BastionHost
# Bastion Security Group
  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Enable SSH access'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 85.221.152.224/32

# APP Instance 1A
  AppInstance1A:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: Bastion
      ImageId: ami-051eaec1417c5d4ae
      SubnetId: !Ref AppPrivateSubnet1A
      SecurityGroupId:
        - !Ref AppInstance1ASG
      Tags:
        - Key: Name
          Value: App1 

# APP Instance 1B
  AppInstance1B:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: Bastion
      ImageId: ami-051eaec1417c5d4ae
      SubnetId: !Ref AppPrivateSubnet1B
      SecurityGroupId:
        - !Ref AppInstance1BSG
      Tags:
        - Key: Name
          Value: App2 

# APP Security Group 
  AppInstance1ASG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Allow ssh from bastion'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IoProtocol: tcp
          PromPort: 22
          ToPort: 22
          SourceSecurityGroupId: BastionSG

# APP Security Group 
  AppInstance1BSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Allow ssh from AppInstance1A'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IoProtocol: icmp
          PromPort: -1
          ToPort: -1
          SourceSecurityGroupId: AppInstance1ASG
